--- a/CSS/custom-style.css
+++ b/CSS/custom-style.css
@@ -41,3 +41,10 @@ body {
 #nav2{
     border-bottom-color: #fff;
 }
+#Acc{
+    padding-top: 90px;
+    text-align: center;
+}
+#H1{
+    border-top: #fff;
+}
